--- a/kpepl-master/about.html
+++ b/kpepl-master/about.html
@@ -51,7 +51,7 @@
 				 </div>
 			</li>
 			<li>
-			<a href="page-sample.html">Products</a>
+			<a href="gallery.html">Products</a>
 			</li>
 			<li>
 			<a href="contact.html">Contact</a>
@@ -63,48 +63,137 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
-<div class="intro-body">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">KARNATAKA PLASCOM ENGINEERS PVT LTD.</h1>
-				<p class="intro-text">
-					Who We Are
-				</p>
-				<a href="#about" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
+<header class="intro-about about-bg">
+
+</header>
+
+<!-- About Section -->
+<div class="row left-navbar">
+	<div class="col-md-2 nav-fix-hide">
+		<div class="introduction">
+			<a href="#introduction-sec">Introduction</a>
+		</div>
+		<div class="history">
+			<a href="#history-sec">History</a>
+		</div>
+		<div class="philosophy">
+			<a href="#philosophy-sec">Philosophy</a>
+		</div>
+		<div class="capabilities">
+			<a href="#capabilities-sec">Capabilities</a>
+		</div>
+		<div class="certificates">
+			<a href="#certificates-sec">Certificates</a>
+		</div>
+	</div>
+	<div class="col-md-10 content-full">
+		<div id="introduction-sec">
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <span class="read-more-target">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+Why do we use it?
+It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). </span><p><a href="#" class="continue read-more">Read more...</a></p>
+
+
+</p>
+		</div>
+		<div id="history-sec">
+			<div id="wrapper">
+			<div class="container">
+				<h3>Our Journey</h3>
+			</div>
+			<section class="timeline">
+			  <ul>
+			    <li>
+			      <div>
+			        <time>1976</time>Started Plascom Industries in a 300 Sqft shed.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>1976</time> Installed our 1st Injection Hand Moulding Machine.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>1978</time> Installed our 1st Fully Auto Cycle Vertical Moulding Machine.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>1980</time> Installed our 1st Fully Automatic Horizontal Moulding Machine.
+			    </li>
+			    <li>
+			      <div>
+			        <time>1987</time> Establishment of M/s. Karnataka Plascom Engineers Private
+			        Limited, Bommasandra with a Constructed area of 15000 Sqft with
+			        6 Injection Moulding Machines upto 180Ton
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>1990</time> Installed our first higher tonnage - 450T machine.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>1994</time> Started in-house tool room.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2000</time> Plant Expansion – Additional 25000 Sqft constructed.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2002</time> ISO 9001:2000 Certified
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2009</time>Upgraded to Servo Technology.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2010</time> Established Auroplast, Hosur – Our sister concern for closer
+			        proximity to our customers.
+			      </div>
+			    </li>
+			    <li>
+			      <div>
+			        <time>2013</time> Plant Expansion – Additional 25000 Sqft constructed.
+			      </div>
+			    </li>
+			     <li>
+			      <div>
+			        <time>2016</time> On the road for TS 16949:2009 implementation.
+			      </div>
+			    </li>
+			     <li>
+			      <div>
+			        <time>2017</time> On the road for IATF 16949 implementation.
+			      </div>
+			    </li>
+			  </ul>
+			</section>
 			</div>
 		</div>
-	</div>
-</div>
-</header>
-<!-- About Section -->
-<div class="full-width">
-<div class="container container-short">
-	<div class="col-md-2" id="side-menu">
-		<ul>
-			<li>
-				<a href="#">Company Profile</a>
-			</li>
-			<li>
-				<a href="#">Philosophy</a>
-			</li>
-			<li>
-				<a href="#">Facilities</a>
-			</li>
-			<li>
-				<a href="#">Certificates</a>
-			</li>
-		</ul>
-	</div>
-	<div class="col-md-10" id="something-div">
-		<div>
-			<h3>Something div</h3>
+		<div id="philosophy-sec">
+			<p class="read-content">
+			There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+		</div>
+		<div id="capabilities-sec">
+			<p class="read-content">
+			Capabilities There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, =or non-characteristic words etc.
+			There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+		</div>
+		<div id="certificates-sec">
+			<p class="read-content">
+			Certificates 
+			There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
 		</div>
 	</div>
-</div>
 </div>
 <!-- Footer -->
 <footer>
@@ -125,4 +214,269 @@
 <script src="js/theme.js"></script>
 </body>
 </html>
+<style type="text/css">
 
+	body{
+	color: black!important;
+	background-color: white!important;
+}
+  *,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+/* About Section 
+______________________________________________________*/
+
+
+.left-navbar{
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.read-content{
+	padding-bottom: 8%;
+}
+
+
+.nav-fix-hide{
+	position: fixed;
+	padding:2%;
+	line-height: 5em;
+	font-weight:600;
+	text-transform: uppercase;
+	letter-spacing: 0.09em;
+}
+
+
+.content-full{
+	margin-left: 15%;
+	margin-right: 5%;
+}
+
+/* INTRO SECTION
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.intro {
+  background: #F45B69;
+  padding: 100px 0;
+}
+
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+
+/* TIMELINE
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.timeline{
+  background: url('../img/img2.jpg')no-repeat center center fixed;
+  background-size: cover;
+  }
+
+.timeline ul {
+  background: #456990;
+  padding: 50px 0;
+}
+
+.timeline ul li {
+  list-style-type: none;
+  position: relative;
+  width: 6px;
+  margin: 0 auto;
+  padding-top: 50px;
+  background: #fff;
+}
+
+.timeline ul li::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: inherit;
+}
+
+.timeline ul li div {
+  position: relative;
+  bottom: 0;
+  width: 400px;
+  padding: 15px;
+  background: #F45B69;
+}
+
+.timeline ul li div::before {
+  content: '';
+  position: absolute;
+  bottom: 7px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+.timeline ul li:nth-child(odd) div {
+  left: 45px;
+}
+
+.timeline ul li:nth-child(odd) div::before {
+  left: -15px;
+  border-width: 8px 16px 8px 0;
+  border-color: transparent #F45B69 transparent transparent;
+}
+
+.timeline ul li:nth-child(even) div {
+  left: -439px;
+}
+
+.timeline ul li:nth-child(even) div::before {
+  right: -15px;
+  border-width: 8px 0 8px 16px;
+  border-color: transparent transparent transparent #F45B69;
+}
+
+time {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+
+/* EFFECTS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.timeline ul li::after {
+  transition: background .5s ease-in-out;
+}
+
+.timeline ul li.in-view::after {
+  background: #F45B69;
+}
+
+.timeline ul li div {
+  visibility: hidden;
+  opacity: 0;
+  transition: all .5s ease-in-out;
+}
+
+.timeline ul li:nth-child(odd) div {
+  transform: translate3d(200px, 0, 0);
+}
+
+.timeline ul li:nth-child(even) div {
+  transform: translate3d(-200px, 0, 0);
+}
+
+.timeline ul li.in-view div {
+  transform: none;
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/* GENERAL MEDIA QUERIES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media screen and (max-width: 420px) {
+	.nav-fix-hide{
+		display: none;
+	}
+ }
+
+
+
+
+
+@media screen and (max-width: 900px) {
+  .timeline ul li div {
+    width: 250px;
+  }
+  .timeline ul li:nth-child(even) div {
+    left: -289px;
+    /*250+45-6*/
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .timeline ul li {
+    margin-left: 20px;
+  }
+  .timeline ul li div {
+    width: calc(100vw - 91px);
+  }
+  .timeline ul li:nth-child(even) div {
+    left: 45px;
+  }
+  .timeline ul li:nth-child(even) div::before {
+    left: -15px;
+    border-width: 8px 16px 8px 0;
+    border-color: transparent #F45B69 transparent transparent;
+  }
+}
+
+
+</style>
+
+<script type="text/javascript">
+  (function() {
+
+  'use strict';
+
+  // define variables
+  var items = document.querySelectorAll(".timeline li");
+
+  // check if an element is in viewport
+  // http://stackoverflow.com/questions/123999/how-to-tell-if-a-dom-element-is-visible-in-the-current-viewport
+  function isElementInViewport(el) {
+    var rect = el.getBoundingClientRect();
+    return (
+      rect.top >= 0 &&
+      rect.left >= 0 &&
+      rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+      rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+    );
+  }
+
+  function callbackFunc() {
+    for (var i = 0; i < items.length; i++) {
+      if (isElementInViewport(items[i])) {
+        items[i].classList.add("in-view");
+      }
+    }
+  }
+
+  // listen for events
+  window.addEventListener("load", callbackFunc);
+  window.addEventListener("resize", callbackFunc);
+  window.addEventListener("scroll", callbackFunc);
+
+})();
+
+/* Content Revealing*/
+	$(function(){
+		$(".continue.read-more").click(function(e){
+			debugger
+			e.preventDefault();
+			$(".read-more-target").toggle();
+			if($(this).html() == "Read more...")
+				$(this).html('Read less...')
+			else
+				$(this).html('Read more...')
+		});
+	})
+
+
+</script>
