--- a/kpepl-master/index.html
+++ b/kpepl-master/index.html
@@ -44,9 +44,9 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li class="dropdown">
-				<a href="about.html">About Us</a>
+				<a href="about2.html">About Us</a>
 				<div class="dropdown-content">
-				  	<a href="about.html">Company Profile</a>
+				  	<a href="about2.html">Company Profile</a>
 				    <a href="#">Certificates</a>
 				    <a href="gallery.html">Gallery</a>
 				    <a href="#">Customers</a>
@@ -166,9 +166,9 @@
 						<div class="services">	
 							<i class="fa fa-users icon-style2"></i>
 							<h3>Core Values</h3>
-							<p>xcellence
-								Ethics
-								People
+							<p>Excellence<br>
+								Ethics<br>
+								People<br>
 								Now</p>
 						</div>
 					</div>
@@ -177,8 +177,11 @@
 			</div>
 		</div>
 </div>
-
-
+<div class="text-center">
+	<div class="text-center find-us">
+		<h3>Find Us</h3>
+	</div>
+</div>
 
 <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=Karnataka%20Plascom%20Engineers%20Private%20Limited%2C%20Bengaluru%2C%20Karnataka%2C%20India&t=&z=14&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>google maps <a href="http://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{overflow:hidden;height:350px;width:100%;}.gmap_canvas {background:none!important;height:350px;width:100%;}</style></div>
 
@@ -206,6 +209,22 @@
 
 </body>
 </html>
+<style type="text/css">
+	.find-us{
+		display: inline-block;
+	    color: grey;
+	    margin-top: 3%;
+	    margin-bottom: 2%;
+	    border-top: 2px solid darkgrey;
+	    padding-top: 1em;
+
+	    
+	}
+	.find-us h3{
+		font-weight: normal;
+		letter-spacing: 0.1em;
+
+</style>
 
 
 <script type="text/javascript">
