--- a/kpepl-master/about.html
+++ b/kpepl-master/about.html
@@ -22,6 +22,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation -->
@@ -51,7 +55,7 @@
 				 </div>
 			</li>
 			<li>
-			<a href="gallery.html">Products</a>
+			<a href="product.html">Products</a>
 			</li>
 			<li>
 			<a href="contact.html">Contact</a>
@@ -84,6 +88,9 @@
 		</div>
 		<div class="certificates">
 			<a href="#certificates-sec">Certificates</a>
+		</div>
+		<div class="certificates">
+			<a href="#galley-sec">Gallery</a>
 		</div>
 	</div>
 	<div class="col-md-10 content-full">
@@ -193,6 +200,90 @@ It is a long established fact that a reader will be distracted by the readable c
 			Certificates 
 			There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
 		</div>
+<div id="galley-sec">
+	<div class="container gallery-container">
+
+	    <h3>Galley</h3>
+
+	    <p class="page-description text-center">Thumbnails With Title And Description</p>
+    
+    <div class="tz-gallery">
+
+        <div class="row">
+
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <a class="lightbox" href="img/auto1.jpg">
+                        <img src="img/auto1.jpg" alt="Park">
+                    </a>
+                    <div class="caption">
+                        <h3>Part Name</h3>
+                        <p>Some Description if needed</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <a class="lightbox" href="img/auto2.jpg">
+                        <img src="img/auto2.jpg" alt="Bridge">
+                    </a>
+                    <div class="caption">
+                        <h3>Part Name</h3>
+                        <p>Some Description if needed</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <a class="lightbox" href="img/auto6.jpg">
+                        <img src="img/auto6.jpg" alt="Tunnel">
+                    </a>
+                    <div class="caption">
+                      <h3>Part Name</h3>
+                        <p>Some Description if needed</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <a class="lightbox" href="img/auto3.jpg">
+                        <img src="img/auto3.jpg" alt="Coast">
+                    </a>
+                    <div class="caption">
+                       <h3>Part Name</h3>
+                        <p>Some Description if needed</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <a class="lightbox" href="img/auto4.jpg">
+                        <img src="img/auto4.jpg" alt="Rails">
+                    </a>
+                    <div class="caption">
+                        <h3>Part Name</h3>
+                        <p>Some Description if needed</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <a class="lightbox" href="img/auto5.jpg">
+                        <img src="img/auto5.jpg" alt="Traffic">
+                    </a>
+                 <div class="caption">
+                       <h3>Part Name</h3>
+                        <p>Some Description if needed</p>
+                 </div>
+            </div>
+         </div>
+     </div>
+
+    </div>
+
+</div>
+
+		</div>
 	</div>
 </div>
 <!-- Footer -->
@@ -218,7 +309,7 @@ It is a long established fact that a reader will be distracted by the readable c
 
 	body{
 	color: black!important;
-	background-color: white!important;
+	
 }
   *,
 *::before,
@@ -254,8 +345,10 @@ ______________________________________________________*/
 
 
 .content-full{
-	margin-left: 15%;
-	margin-right: 5%;
+	margin-left: 20%;
+    margin-right: 5%;
+    width: 75%;
+
 }
 
 /* INTRO SECTION
@@ -388,6 +481,72 @@ time {
 }
 
 
+/* Gallery
+_________________________________________________*/
+
+
+.gallery-container h1 {
+    text-align: center;
+    margin-top: 70px;
+    font-family: 'Droid Sans', sans-serif;
+    font-weight: bold;
+    color: #58595a;
+}
+
+.gallery-container p.page-description {
+    text-align: center;
+    margin: 30px auto;
+    font-size: 18px;
+    color: #85878c;
+}
+
+.tz-gallery {
+    padding: 40px;
+}
+
+.tz-gallery .thumbnail {
+    padding: 0;
+    margin-bottom: 30px;
+    background-color: #fff;
+    border-radius: 4px;
+    border: none;
+    transition: 0.15s ease-in-out;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+}
+
+.tz-gallery .thumbnail:hover {
+    transform: translateY(-10px) scale(1.02);
+}
+
+.tz-gallery .lightbox img {
+    border-radius: 4px 4px 0 0;
+}
+
+.tz-gallery .caption{
+    padding: 26px 30px;
+    text-align: center;
+}
+
+.tz-gallery .caption h3 {
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+.tz-gallery .caption p {
+    font-size: 12px;
+    color: #7b7d7d;
+    margin: 0;
+}
+
+.baguetteBox-button {
+    background-color: transparent !important;
+}
+
+
+
+
+
 /* GENERAL MEDIA QUERIES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media screen and (max-width: 420px) {
@@ -429,6 +588,7 @@ time {
 
 
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
 
 <script type="text/javascript">
   (function() {
@@ -477,6 +637,10 @@ time {
 				$(this).html('Read more...')
 		});
 	})
+
+
+/* Gallery Plugin */
+baguetteBox.run('.tz-gallery');
 
 
 </script>
