--- a/kpepl-master/about2.html
+++ b/kpepl-master/about2.html
@@ -500,7 +500,7 @@ ________________________________________________*/
     /* Start the shake animation and make the animation last for 0.5 seconds */
     animation: shake 0.5s; 
     /* When the animation is finished, start again */
-    animation-iteration-count: 20s; 
+    animation-iteration-count: infinite; 
 }
 
 @keyframes shake {
