--- a/kpepl-master/about2.html
+++ b/kpepl-master/about2.html
@@ -11,6 +11,8 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
 <link href="css/theme.css" rel="stylesheet">
+<link href="css/slick.css" rel="stylesheet">
+<link href="css/slick-theme.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -25,8 +27,10 @@
 
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
-
+    <script src="js/jquery.js"></script>
+    
 </head>
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation nav-bg">
@@ -342,10 +346,8 @@
 <div id="customers-sec">
 	<div class="container">
 		<h3>Our Customers</h3>
-		<div class="col-md-1">
-			<a href="#"><h2><</h2></a>
-		</div>
-		<div class="col-md-10">
+		
+		<div class="col-md-10 slick">
 			<div class="col-md-4">
 				<img src="img/img2.jpg">
 			</div>
@@ -357,9 +359,6 @@
 			</div>
 	
 			
-		</div>
-		<div class="col-md-1">
-			<a href="#"><h2>></h2></a>
 		</div>
 	</div>
 </div>
@@ -384,6 +383,14 @@
 <script src="js/jquery.easing.min.js"></script>
 <!-- Custom Theme JavaScript -->
 <script src="js/theme.js"></script>
+<script src="js/slick.js"></script>
+<script type="text/javascript">
+  $(function(){
+    $(".slick").slick({infinite: true,
+    slidesToShow: 2,
+    slidesToScroll: 2});
+  })
+</script>
 </body>
 </html>
 <style type="text/css">
