--- a/kpepl-master/contact.html
+++ b/kpepl-master/contact.html
@@ -41,7 +41,7 @@
 			<a href="index.html">Home</a>
 			</li>
 			<li class="dropdown">
-				<a href="portfolio-item.html">About Us</a>
+				<a href="about2.html">About Us</a>
 				<div class="dropdown-content">
 				  	<a href="about.html">Company Profile</a>
 				    <a href="#">Certificates</a>
@@ -50,7 +50,7 @@
 				 </div>
 			</li>
 			<li>
-			<a href="page-sample.html">Products</a>
+			<a href="product.html">Products</a>
 			</li>
 			<li>
 			<a href="contact.html">Contact</a>
@@ -62,29 +62,23 @@
 <!-- /.container -->
 </nav>
 <!-- Intro Header -->
-<header class="intro">
-<div class="intro-body">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">KARNATAKA PLASCOM ENGINEERS PVT LTD.</h1>
-				<p class="intro-text">
-					Contact Us
-				</p>
-				<a href="#about" class="btn btn-circle page-scroll">
-				<i class="fa fa-angle-double-down animated"></i>
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
+<<header class="intro-about about-bg">
+  <div class="text-center branding">
+  	<h2>Contact US</h2>
+  	<p> Pioneers in Plastic Injection moulding, supplying to various OEM’s for the last 4 decades</p>
+  </div>
 </header>
+
 <!-- About Section -->
 <!-- Footer -->
 <footer>
 <div class="container text-center">
 	<p class="credits">
 		Copyright &copy; Karnataka Plascom Engineers Pvt Ltd. 2017<br/>
+		
+	</p>
+	<p class="credits">
+		Designed By TriumVirates
 		
 	</p>
 </div>
