--- a/kpepl-master/index.html
+++ b/kpepl-master/index.html
@@ -48,8 +48,10 @@
 				<div class="dropdown-content">
 				  	<a href="about2.html">Company Profile</a>
 				    <a href="#">Certificates</a>
-				    <a href="gallery.html">Gallery</a>
+				    <a href="#">Gallery</a>
 				    <a href="#">Customers</a>
+				    <a href="#">Capabilities</a>
+             		<a href="#">Philosophy</a>
 				 </div>
 			</li>
 			<li>
@@ -92,7 +94,7 @@
 			<p class="about-us">
 			M/s Karnataka Plascom Engineers Pvt. Ltd., Bommasandra, pioneers in plastic injection moulding, supplying to various OEM’s for the last 4 decades <span class="read-more-target">
 				dfjnsad fsdgns fasd.gn fsdag.ngsdg gsdg. 
-				</span><a href="#" class="continue read-more">Read more...</a>
+				</span><br><a href="#" class="continue read-more">Read More</a>
 			</p>
 			<div class="border">
 				<img src="img/profile.jpg" class="profile">
@@ -191,6 +193,7 @@
 <div class="container text-center">
 	<p class="credits">
 		Copyright &copy; Karnataka Plascom Engineers Pvt Ltd. 2017<br/>
+		Designed by TriumVirates
 		
 	</p>
 </div>
@@ -233,10 +236,10 @@
 			debugger
 			e.preventDefault();
 			$(".read-more-target").toggle();
-			if($(this).html() == "Read more...")
-				$(this).html('Read less...')
+			if($(this).html() == "Read less...")
+				$(this).html('Read More...')
 			else
-				$(this).html('Read more...')
+				$(this).html('Read less...')
 		});
 	})
 
